--- a/client/src/components/chat/Chat.css
+++ b/client/src/components/chat/Chat.css
@@ -10,28 +10,22 @@
 }
 
 .messages-container {
-    width: 100%;
-    max-width: 600px;
-    height: 400px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 10px;
-    overflow-y: scroll;
-    margin-bottom: 20px;
-    background-color: #f9f9f9;
+    max-height: 500px;
+    overflow-y: auto;
 }
 
 .message {
-    padding: 10px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-    background-color: #e1e1e1;
+    display: flex;
+    align-items: center;
 }
 
 .message.own {
+    justify-content: flex-end;
     background-color: #d1e7dd;
-    align-self: flex-end;
-    text-align: right;
+}
+
+.message h4 {
+    margin: 0;
 }
 
 .message p {
